tut26: firebase Authenticated access.

--- a/src/index.html
+++ b/src/index.html
@@ -13,4 +13,19 @@
 <body>
   <app-root>Loading...</app-root>
 </body>
+
+
+<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDX1V7vOg6CPiV7YAWp9PCUTQJj-Y0O7Do",
+    authDomain: "sherif-ninja.firebaseapp.com",
+    databaseURL: "https://sherif-ninja.firebaseio.com",
+    storageBucket: "sherif-ninja.appspot.com",
+    messagingSenderId: "388261879173"
+  };
+  firebase.initializeApp(config);
+</script>
+
 </html>
