the net ninja *firebase snippets in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,21 @@
   <app-root>Loading...</app-root>
 </body>
 
+<!-- the net ninja snippet starts-->
 
-<script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDX1V7vOg6CPiV7YAWp9PCUTQJj-Y0O7Do",
-    authDomain: "sherif-ninja.firebaseapp.com",
-    databaseURL: "https://sherif-ninja.firebaseio.com",
-    storageBucket: "sherif-ninja.appspot.com",
-    messagingSenderId: "388261879173"
-  };
-  firebase.initializeApp(config);
-</script>
+	<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+	<script>
+		// Initialize Firebase
+		var config = {
+			apiKey: "AIzaSyCx18R2crzYSXV8Sp0KsSy35I-FzuTTKME",
+			authDomain: "nn-angular-3f5e8.firebaseapp.com",
+			databaseURL: "https://nn-angular-3f5e8.firebaseio.com",
+			storageBucket: "nn-angular-3f5e8.appspot.com",
+			messagingSenderId: "941550239447"
+		};
+		firebase.initializeApp(config);
+	</script>
+  
+  <!-- the net ninja snippet ends -->
 
 </html>
